fixed mobile layout overflow

--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@
 body {
     border: 5px solid var(--color3);
     min-height: 100vh;
-    min-width: 100vw;
+    max-width: 100vw;
     background-color: white;
     overflow-x: hidden;
 }
@@ -134,7 +134,7 @@ footer {
     position: absolute;
     display: block;
     bottom: 0em;
-    width: 99vw;
+    width: 100vw;
     text-align: center;
     margin-top: auto;
     background-color: var(--color3);
